Bug 60234 - cannot load emboleobj library on Windows, causing OLE object lossage
Summary: cannot load emboleobj library on Windows, causing OLE object lossage
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.1.0 target:4.0.1
Keywords: regression
: 60492 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-03 14:30 UTC by walburg.frank
Modified: 2013-02-11 14:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Testdocument with bmp and gif objects (13.22 KB, application/vnd.oasis.opendocument.text)
2013-02-03 14:30 UTC, walburg.frank
Details
used bmp object (26.87 KB, image/bmp)
2013-02-03 14:32 UTC, walburg.frank
Details
Screenshot of wrong display of bmp object (11.11 KB, image/jpeg)
2013-02-03 14:33 UTC, walburg.frank
Details
screenshot of test document opened in 3.6.5.2 (144.02 KB, image/jpeg)
2013-02-03 22:18 UTC, headsup
Details
Document only saved with LibO 3.6.5.2 (29.33 KB, application/vnd.oasis.opendocument.text)
2013-02-03 22:51 UTC, walburg.frank
Details
Screenshot of document save only with LibO 3.6.5.2 (61.99 KB, image/jpg)
2013-02-03 22:51 UTC, walburg.frank
Details

Note You need to log in before you can comment on or make changes to this bug.
Description walburg.frank 2013-02-03 14:30:31 UTC
Created attachment 74134 [details]
Testdocument with bmp and gif objects

Problem description: 

Steps to reproduce:
1. in LibO 3.5.6 I inserted a bmp and a gif object into the document
2. when opening with LibO starting from version 4.0.0.1 to 4.0.0.3, the git object was shown correctly, the bmp object was just shown using a symbol

Current behavior: wrong display of bmp objects

Expected behavior: bmp objects should be shown correcly

              
Operating System: Windows 8
Version: 4.0.0.3 rc
Last worked in: 3.6.5.2 rc
Comment 1 walburg.frank 2013-02-03 14:32:22 UTC
Created attachment 74137 [details]
used bmp object
Comment 2 walburg.frank 2013-02-03 14:33:11 UTC
Created attachment 74138 [details]
Screenshot of wrong display of bmp object
Comment 3 headsup 2013-02-03 22:18:06 UTC
Created attachment 74154 [details]
screenshot of test document opened in 3.6.5.2

I looked at your document in 4.0.0.3 and indeed I can't see the bmp images. I tried to replicate the issue with a new document created in 3.6.5.2 with bmp and gif images, they are ok in 4.0.0.3. 

I then downloaded your test document again and opened it in 3.6.5.2 - exactly the same problem is present (see attached screenshot) so I suspect this is some kind of corruption that you had with the original document. 

If you can still replicate this let me know and state exactly the steps taken and I will relook at it.
Comment 4 headsup 2013-02-03 22:19:42 UTC
By the way my testing environment was W8 Pro 32bit, x86.
Comment 5 Jorendc 2013-02-03 22:35:23 UTC
(In reply to comment #3)
> so I suspect this is some kind of corruption that you had with the original >document. 


I completely agree with that. Therefor I should say: RESOLVED WORKSFORME. Although I also can reproduce the problem by opening your created document, but can't reproduce it by insert it/save it/reopen it by myself.
Therefore I also suspect this is a corrupt file created by that version of LibreOffice.

Kind regards,
Joren
Comment 6 walburg.frank 2013-02-03 22:51:07 UTC
Created attachment 74157 [details]
Document only saved with LibO 3.6.5.2
Comment 7 walburg.frank 2013-02-03 22:51:46 UTC
Created attachment 74158 [details]
Screenshot of document save only with LibO 3.6.5.2
Comment 8 walburg.frank 2013-02-03 22:54:22 UTC
when creating the document with bmp and gif in LibO 3.6.5.2, the images aer shown correctly (see added screenshot). When the document is opened in LibO 4.0.0.3, the bmp image is shown incorrectly.
When then the document is save in LibO 4.0.0.3 and re-opened in LibO 3.6.5.2, the image is also shown incorrectly.
This does not only happen with this document, but with all other documets I've created using LibO 3.6
Comment 9 headsup 2013-02-04 08:59:50 UTC
Thanks for testing again and providing clears steps which I followed.

I can confirm that when I opened the document in attachment 74157 [details] in Libreoffice 3.6.5.2 it appears correctly but when I open it in 4.0.0.2 or 4.0.0.3 the bmp images are not visible. 

However, if I create a new document in 3.6.5.2 with bmp and gif images (I used your bmp but I had to recreate your gif by saving it in Paint) and save it, the bmp and gif images are visible in 3.6.5.2, and 4.0.0.2, and 4.0.0.3. 

I have searched for similar bugs (mentioning bmp) with status UNCONFIRMED, NEW, ASSIGNED, REOPENED, VERIFIED, NEEDINFO, PLEASETEST in 3.6.5.2 and 4.x and there were non found (yet!).

This indicates that there may be a problem with documents that are created on your specific installation.

To check this could you reinstall Libreoffice using full admin privileges, test again and report back with your results. If you still have a problem could you please provide full details of your installation - 32 / 64 bit, processor, locale, etc.

Also does this problem only happen with bmp images? If so please create a new test document (in your fresh installation) with different bmp images which have been saved in Paint.

Thanks.
Comment 10 Joel Madero 2013-02-04 16:56:49 UTC
Marking as NEEDINFO until headsup request is done. Thanks for your patience
Comment 11 walburg.frank 2013-02-04 21:16:15 UTC
I did the tests, like you proposed:
- I created a new document using LibO 3.6.5 and inserted the bmp and gif image attached to this document.
- I opened the document again with LibO 4.0.0.3 and both images are shown correctly.

This means, that in the document, where the bmp image is not shown correctly, there seems to be an error in.
I have several of these documents, because I use LibO since a long time. So I'm not sure with which version of LibO these documents have been created.
Do you have an idea how to deal with it, because I estimate that I have more than hundred documents, which are affected.

Thank you.
Comment 12 Jorendc 2013-02-06 12:43:17 UTC
(In reply to comment #11)
> Do you have an idea how to deal with it, because I estimate that I have more
> than hundred documents, which are affected.

Mmh, that's hard to do I guess. I ran this document through a ODF validator: http://odf-validator.rhcloud.com/ and I get some errors:

Test LibO 3.5.6.odt/styles.xml[2,5417]: Error: unexpected attribute "style:contextual-spacing"
Test LibO 3.5.6.odt/styles.xml[2,5805]: Error: unexpected attribute "style:contextual-spacing"
Test LibO 3.5.6.odt/styles.xml[2,6109]: Error: unexpected attribute "style:contextual-spacing"
Test LibO 3.5.6.odt/styles.xml[2,8665]: Error: unexpected attribute "style:contextual-spacing"

Test LibO 3.5.6.odt/content.xml[2,5089]: Error: unexpected attribute "officeooo:paragraph-rsid"
Test LibO 3.5.6.odt/content.xml[2,5202]: Error: unexpected attribute "officeooo:rsid"

Following last 2 comments, is it possible this document is opened/saved with OpenOffice or something similar?

Kind regards,
Joren
Comment 13 walburg.frank 2013-02-06 15:30:43 UTC
Before I started using LibO some years ago, I used Microsoft Office. In these times, I converted the existing doc files to odt format.
Maybe the wrong formatting is still coming from these times.

Is there a possibility (tool) to correct wrong odf formatting ?

Thanks.
Comment 14 Michael Stahl 2013-02-06 19:10:01 UTC
jorendc, re: comment #12:
those attributes are only written by LibreOffice, and only
when using the default "ODF 1.2 Extended" format.

you need to use the "ODF 1.2 (extended conforming)" option
for the validator to not get these error reports.
Comment 15 Michael Stahl 2013-02-08 19:44:52 UTC
bug is a regression from 393588ce8e698203dd87a87eb506afb551457717
which only adapted one of the two component files for the emboleobj
library to the new prefix; fixed on master
Comment 16 Michael Stahl 2013-02-08 19:45:18 UTC
forgot to say: bug happens only on Windows
Comment 17 Not Assigned 2013-02-08 19:47:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63ca871bf8f14e0450e5da0dbcfa3ee5d48f1604

fdo#60234 fdo#60492: fix emboleobj library on WNT:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Michael Stahl 2013-02-08 19:58:14 UTC
*** Bug 60492 has been marked as a duplicate of this bug. ***
Comment 19 walburg.frank 2013-02-08 22:48:49 UTC
will this fix be available already in version 4.0.1 or only in 4.1.0 as written in the "whiteboard" field ?
Comment 20 Joel Madero 2013-02-08 23:24:35 UTC
This bug is fixed, we can request that it's ported back to 4.0.1 but it's still fixed so status should remain as such
Comment 21 walburg.frank 2013-02-08 23:38:41 UTC
Thank you very much.
For sure it's fixed.
How can it be requested to be ported back to 4.0.1 ?
Comment 22 Joel Madero 2013-02-08 23:42:15 UTC
Michael Stahl should see these messages and port it back if he's able to. Give it a few days, if he hasn't responded, send headsup (QA contact) and email and see if he can look into it :-D
Comment 23 Not Assigned 2013-02-11 08:49:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf9157f9cc26446f0c25e85393fbe3a7603455d2&h=libreoffice-4-0

fdo#60234 fdo#60492: fix emboleobj library on WNT:


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 walburg.frank 2013-02-11 09:41:04 UTC
Thank you very much for backporint to 4.0.1